--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,9 @@ primary_region = 'atl'
 
 [build]
 
+[deploy]
+  release_command = "migrate -y"
+
 [http_service]
   internal_port = 8080
   force_https = true
