--- a/fly.toml
+++ b/fly.toml
@@ -19,6 +19,11 @@ primary_region = 'atl'
   min_machines_running = 0
   processes = ['app']
 
+[[restart]]
+  policy = always
+  retries = 3
+  processes = ["app"]
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
